# neuro-jetson-detect

./: .gitignore  .gitmodules  README.md
ffmpeg-streamer/: CMakeLists.txt
ffmpeg-streamer/lib/ffmpeg_stream/: CMakeLists.txt
ffmpeg-streamer/lib/ffmpeg_stream/ffmpeg_receiver/: CMakeLists.txt
ffmpeg-streamer/lib/ffmpeg_stream/ffmpeg_sender/: CMakeLists.txt
ffmpeg-streamer/lib/ffmpeg_stream/ffmpeg_sender/src/: TypeStream.cpp
ffmpeg-streamer/lib/ffmpeg_stream/handler/: CMakeLists.txt  handler.cpp
ffmpeg-streamer/lib/gst_stream/: CMakeLists.txt  CMakeSettings.json
ffmpeg-streamer/lib/gst_stream/gstreamer_handler/: CMakeLists.txt  handler.cpp
ffmpeg-streamer/lib/gst_stream/gstreamer_receiver/: CMakeLists.txt
ffmpeg-streamer/lib/gst_stream/gstreamer_receiver/source/: gst_receiver.cpp  gst_receiver.h  rtp_receiver.cpp  rtp_receiver.h
ffmpeg-streamer/lib/gst_stream/gstreamer_sender/: CMakeLists.txt
ffmpeg-streamer/lib/gst_stream/gstreamer_sender/source/: gst_sender.cpp  gst_sender.h  rtp_sender.cpp  rtp_sender.h
ffmpeg-streamer/lib/gst_stream/libs/elements/: CMakeLists.txt  gstrtploaderplugin.c  gstrtploaderplugin.h
ffmpeg-streamer/lib/gst_stream/meta/: meta_api.h
ffmpeg-streamer/receiver/: CMakeLists.txt
ffmpeg-streamer/receiver/src/: FFMpegReceiver.cpp  FFMpegReceiver.h
ffmpeg-streamer/rtp-server/: CMakeLists.txt  FFmpegAdapter.cpp  FFmpegAdapter.h  GstreamerAdapter.cpp  GstreamerAdapter.h  IStreamer.h  RTPServer.cpp  RTPServer.hpp  RequestHandler.cpp  RequestHandler.hpp  StreamServer.cpp  StreamServer.h  StreamWorker.cpp  StreamWorker.h  TaskManager.h  main.cpp
ffmpeg-streamer/sender/: CMakeLists.txt
ffmpeg-streamer/sender/src/: FFMpegStreamer.cpp  FFMpegStreamer.h  TypeStream.h
main-window/: CMakeLists.txt  main.cpp  resources.qrc
main-window/lib/: gst_receiver.lib  gst_sender.lib
main-window/lib/include/: gst_receiver.h  gst_sender.h
main-window/qml/: window.qml
main-window/src/: GWindow.cpp  GWindow.h  gsthandler.cpp  gsthandler.h  wgstreceiverwrapper.cpp  wgstreceiverwrapper.h  wgstsenderwrapper.cpp  wgstsenderwrapper.h
rtp-streamer/: CMakeLists.txt  CMakeSettings.json  stream.sdp
rtp-streamer/source/: main.cpp  rtp_server.cpp  rtp_server.h
rtp-streamer/src/: CMakeLists.txt  CMakeSettings.json  stream.sdp
rtp-streamer/src/cuda_source/: test.cu
rtp-streamer/src/source/: main.cpp  rtp_server.cpp  rtp_server.h  test.cuh
